2010-04-03  Russ Allbery  <rra@stanford.edu>

	* ShadowHash.pm (FETCH): Correctly return undef if undef was
	explicitly stored in the hash.
	* t/basic.t: Test handling of explicit stores of undef values.

	* t/basic.t: Add some tests for the scalar value of the hash.

	* ShadowHash.pm: Add explicit documentation for the add() method.
	Mention that AnyDBM_File doesn't support EXISTS since some of its
	underlying modules don't.

	* ShadowHash.pm (NEXTKEY): When traversing the hash, adjust for
	keys that are shadowed by earlier hashes or by the override hash.
	Previously, keys that occurred in multiple sources or in the
	override hash would be returned multiple times by each.

	* t/basic.t: Test correct override handling on each.

	* test.pl: Moved to...
	* t/basic.t: ...here and rewritten to use Test::More.  Moved all
	test data from test to t/data.

	* ShadowHash.pm: Require Perl 5.006 or later.  Use the three
	argument form of open and declare iterator variables in for
	statements.  Clean up coding style for explicit return and
	dereferencing.

2002-07-27  Russ Allbery  <rra@stanford.edu>

	* README: Tie::ShadowHash 0.7 released.

	* ShadowHash.pm: Add SEE ALSO and COPYRIGHT AND LICENSE sections
	to the documentation.  Reformat for current formatting style.

1999-06-02  Russ Allbery  <rra@stanford.edu>

	* README: Tie::ShadowHash 0.6 released.

	* ShadowHash.pm: Added documentation of tagged data sources and of
	the "text" tagged data source in particular, as well as some
	examples, now that this has been verified as already working.

	* test.pl: Added tests for special text data sources that take a
	filename and a sub that returns a list of key and one or more
	values.

	* test/pairs.txt: New file.
	* test/triples.txt: New file.

1999-04-03  Russ Allbery  <rra@stanford.edu>

	* README: Tie::ShadowHash 0.5 released.

	* ShadowHash.pm: Fixed NEXTKEY again; it was skipping over too
	much of the source when it hit a deleted key.
